[gd_scene load_steps=5 format=3 uid="uid://cyvjp4dc2x8lp"]

[ext_resource type="Theme" uid="uid://cbrysnciqlhs0" path="res://Assets/CustomThemes/MainTheme.tres" id="1_w7xf6"]
[ext_resource type="Script" path="res://Scripts/Introduction.gd" id="2_a5g4a"]
[ext_resource type="AudioStream" uid="uid://coceogio7krme" path="res://Assets/Sfx/Pop Sfx.mp3" id="3_n6s43"]
[ext_resource type="Texture2D" uid="uid://xt6v3at1ogi1" path="res://Assets/Images/Barista.png" id="3_rrsni"]

[node name="Introduction" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_w7xf6")
script = ExtResource("2_a5g4a")

[node name="PanelIntroduction" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LabelIntroduction" type="Label" parent="PanelIntroduction"]
layout_mode = 0
offset_left = 192.0
offset_top = 96.0
offset_right = 960.0
offset_bottom = 416.0
theme_override_font_sizes/font_size = 24
text = "(Text)"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ButtonNext" type="Button" parent="PanelIntroduction"]
layout_mode = 0
offset_left = 616.0
offset_top = 472.0
offset_right = 744.0
offset_bottom = 512.0
mouse_default_cursor_shape = 2
text = "Selanjutnya"

[node name="ButtonPrev" type="Button" parent="PanelIntroduction"]
layout_mode = 0
offset_left = 408.0
offset_top = 472.0
offset_right = 536.0
offset_bottom = 512.0
mouse_default_cursor_shape = 2
text = "Kembali"

[node name="TextureRect" type="TextureRect" parent="PanelIntroduction"]
layout_mode = 0
offset_left = 968.0
offset_top = 120.0
offset_right = 1308.0
offset_bottom = 768.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_rrsni")

[node name="PopSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_n6s43")

[connection signal="pressed" from="PanelIntroduction/ButtonNext" to="." method="_on_buttonNext_pressed"]
[connection signal="pressed" from="PanelIntroduction/ButtonPrev" to="." method="_on_buttonPrev_pressed"]
